<resources>
    <string name="app_name">Our Singapore</string>
    <string name="name">Name</string>
    <string name="hint_name">Enter island name here</string>
    <string name="description">Description</string>
    <string name="hint_description">Enter description here</string>
    <string name="area">Square km</string>
    <string name="hint_area">Enter Area in square km here (use whole number and use 1 for any area less than 1 square km)</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="title_activity_main">Insert Island</string>
    <string name="title_activity_second">Show Island</string>
    <string name="title_activity_third">Modify Island</string>

    <string name="id">ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all island with 5 stars</string>
</resources>
